# react-native-phi3

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  engle-llm.code-workspace  package-lock.json  package.json  react-native-phi3.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativephi3/: EngleLlmModule.kt  EngleLlmPackage.kt
cpp/assets/ios/: libonnxruntime-genai.dylib
cpp/lib/onnx/include/: engle_onnx.h  engle_utils.h
cpp/lib/onnx/lib/: engle_onnx.cpp
cpp/lib/onnx/utils/: engle-utils.cpp
example/: package.json
example/src/: App.tsx  assets.txt
ios/: EnglePhi3.h  EnglePhi3.mm
src/: index.tsx
